--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,8 @@
 
 html {
   font-size: 62.5%;
+  height: 100%;
+  width: 100%;
 }
 
 a {
@@ -15,23 +17,17 @@ a {
   color: inherit;
 }
 
-@keyframes fade-in-from-bottom {
-  0% {
-    transform: translateY(5rem);
-    opacity: 0;
-  }
-  100% {
-    transform: translateY(0rem);
-    opacity: 1;
-  }
-}
 .body {
-  height: 100%;
-  width: 100%;
   font-family: "Bebas Neue", sans-serif;
   color: #fff;
   display: flex;
   flex-direction: column;
+  height: 100%;
+  width: 100%;
+}
+
+.main {
+  width: 100%;
 }
 
 h1 {
@@ -46,8 +42,6 @@ h1 {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: fixed;
-  z-index: 1;
 }
 
 .logo {
@@ -79,6 +73,7 @@ h1 {
 
 .container {
   height: 80rem;
+  width: 100%;
 }
 .container--1 {
   background-color: #006747;
@@ -92,7 +87,6 @@ h1 {
   width: 55rem;
   object-fit: contain;
   padding: 3rem 0;
-  animation: fade-in-from-bottom 0.8s backwards;
 }
 .container--2 {
   background-color: #f5f5f7;
@@ -103,13 +97,11 @@ h1 {
 }
 .container--2__heading {
   color: #006747;
-  animation: fade-in-from-bottom 1s backwards;
 }
 .container--2__img {
   height: 60rem;
   width: 95rem;
   object-fit: contain;
-  animation: fade-in-from-bottom 1s 0.2s backwards;
 }
 .container--3 {
   background-color: #006747;
@@ -118,14 +110,10 @@ h1 {
   align-items: center;
   justify-content: center;
 }
-.container--3__heading {
-  animation: fade-in-from-bottom 1.2s backwards;
-}
 .container--3__img {
   height: 60rem;
   width: 110rem;
   object-fit: contain;
-  animation: fade-in-from-bottom 1.2s 0.2s backwards;
 }
 .container--4 {
   background-color: #f5f5f7;
@@ -136,21 +124,18 @@ h1 {
 }
 .container--4__heading {
   color: #006747;
-  animation: fade-in-from-bottom 1.4s backwards;
 }
 .container--4__img {
   height: 60rem;
   width: 90rem;
   object-fit: contain;
   padding: 5rem 0;
-  animation: fade-in-from-bottom 1.4s 0.2s backwards;
 }
 .container--4__text {
   color: #9b9b9b;
   font-family: "Inter", sans-serif;
   font-size: 1.5rem;
   font-weight: 500;
-  animation: fade-in-from-bottom 1.4s 0.2s backwards;
 }
 .container--5 {
   background-color: #006747;
@@ -163,7 +148,6 @@ h1 {
   width: 30rem;
   object-fit: contain;
   margin: 0 5rem;
-  animation: fade-in-from-bottom 1.4s 0.4s backwards;
 }
 
 .store-link {
@@ -175,13 +159,11 @@ h1 {
   height: 25rem;
   width: 45rem;
   object-fit: contain;
-  animation: fade-in-from-bottom 0.8s 0.2s backwards;
 }
 .store-link__img {
   height: 6rem;
   width: 25rem;
   object-fit: contain;
-  animation: fade-in-from-bottom 0.8s 0.4s backwards;
 }
 
 .steps {
@@ -191,7 +173,6 @@ h1 {
 }
 .steps__heading {
   padding: 4rem 0;
-  animation: fade-in-from-bottom 1.4s backwards;
 }
 .steps__text {
   width: 50rem;
@@ -199,7 +180,6 @@ h1 {
   font-family: "Inter", sans-serif;
   font-size: 2.5rem;
   font-weight: 600;
-  animation: fade-in-from-bottom 1.4s 0.2s backwards;
 }
 
 .footer {
